--- a/styles/vault.css
+++ b/styles/vault.css
@@ -8,7 +8,7 @@
 	height: min(70vw, 90vh);
 }
 
-button {
+button, input[type=submit] {
 	font-family: 'Bauhaus 93';
 	background-color: grey;
 	color: white;
@@ -17,15 +17,22 @@ button {
     -webkit-text-stroke-color: black;);
 	width: max(12vw, 120px);
 	padding: max(1.5vw, 15px);
-	padding-top:max(.75vw,7.5px);
-	padding-bottom:max(.75vw,7.5px);
+	padding-top:max(.25vw,2.5px);
+	padding-bottom:max(.25vw,2.5px);
 	border: solid max(.1vw,1px) black;
 	border-radius: 10px;
 	transform: translate(-50%, -50%);
 	margin-left: 50%;
+	margin-top: 2%;
 }
 
 button:hover {
+	color: darkgrey;
+	background-color: white;
+	cursor: pointer;
+}
+
+input[type=submit]:hover {
 	color: darkgrey;
 	background-color: white;
 	cursor: pointer;
@@ -60,7 +67,7 @@ button:hover {
 }
 
 .startButton {
-	margin-top: 10%;
+	margin-top: 7%;
 }
 
 .home, .retry {
@@ -189,7 +196,7 @@ button:hover {
 
 .round-time-bar {
 	position: absolute;
-	margin-top: 3%;
+	margin-top: 7%;
 	width: 40%;
 	overflow: hidden;
 	height: 5px;
@@ -199,7 +206,7 @@ button:hover {
 
 .hiding-bar {
 	position: absolute;
-	margin-top: 3%;
+	margin-top: 7%;
 	z-index: 1;
 	width: 80%;
 	left: 10%;
@@ -236,17 +243,17 @@ button:hover {
 	text-align: center;
 	font-size: max(1.2vw, 10px);
 	font-weight: 700;
-	letter-spacing: 1px;
+	letter-spacing: .5px;
 	font-family: 'calibri';
 }
 
 #answerInput {
 	color: white;
 	margin-left: max(30%, 87.5px);
-	margin-top: 3%;
+	margin-top: 7%;
 	width: max(40%, 125px);
 	padding: max(.5vw, 5px);
-	background-color: rgb(72,72,144);
+	background-color: transparent;
 	font-size: max(2vw, 10px);
 	outline: none;
 	border: 0;
